# ncd-covid

./: CMakeLists.txt  README.md
config/: env.sh
ncdbuild/: Dockerfile  Makefile
scripts/: compressed_size  make-fais  make-package
src/: basicCompressor.cpp  basicCompressor.hpp  cachingCompressor.cpp  cachingCompressor.hpp  cleaner-main.cpp  datasource.cpp  datasource.hpp  displayName.cpp  displayName.hpp  distMatrixWriter.cpp  distMatrixWriter.hpp  entryAndNCD.cpp  entryAndNCD.hpp  envutil.cpp  envutil.hpp  fsutil.cpp  fsutil.hpp  humanMito.cpp  humanMito.hpp  importer-main.cpp  main.cpp  nameAndCRC.cpp  nameAndCRC.hpp  ncdHelper.cpp  ncdHelper.hpp  ncdSortedEntryList.cpp  ncdSortedEntryList.hpp  rocksHelper.cpp  rocksHelper.hpp  selectedSequence.cpp  selectedSequence.hpp  seqNameHelper.cpp  seqNameHelper.hpp  sequenceCompressor.cpp  sequenceCompressor.hpp  sequenceReader.cpp  sequenceReader.hpp  sort-everything-main.cpp  taggedSequenceCombination.cpp  taggedSequenceCombination.hpp  (+6 more)
tree_converter/: convert_tree.rb
